--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 #title {
+    margin-top: 15px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: xx-large;
     color: green;
@@ -14,6 +15,8 @@ body {
 }
 
 #color-palette {
+    display: flex;
+    justify-content: center;
     margin: auto;
 }
 
@@ -21,6 +24,7 @@ body {
     display: inline-block;
     width: 80px;
     height: 80px;
+    margin: 25px 5px;
     border: 1px solid rgb(26, 23, 23);
 }
 
