--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     width: 80px;
     height: 80px;
     margin: 25px 5px;
+    border-radius: 100%;
     border: 1px solid rgb(26, 23, 23);
 }
 
@@ -45,17 +46,17 @@ body {
 }
 
 #pixel-board {
-    width: 400px;
-    height: 402px;
-    border: 0.2px solid black;
+    width: 210px;
+    height: 210px;
+    border: 1px solid black;
     margin: 15px auto;
 }
 
 .pixel {
-    width: 80px;
-    height: 80px;
+    width: 40px;
+    height: 40px;
     background-color: white;
-    border: 0.2px solid black;
+    border: 1px solid black;
 }
 
 .linhas {
