--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ body {
     background-color: yellow;
 }
 
+.background-white {
+    background-color: white;
+}
+
 #pixel-board {
     width: 189px;
     height: 188px;
@@ -66,7 +70,6 @@ body {
     display: inline-block;
     width: 40px;
     height: 40px;
-    background-color: white;
     border: 1px solid black;
     margin: -4px;
 }
