--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     font-size: 20px;
     width: 40px;
     height: 28px;
+    text-align: center;
 }
 
 #generate-board {
@@ -81,8 +82,9 @@ body {
 }
 
 #pixel-board {
+    display: block;
     border: 1px solid black;
-    margin: auto;
+    margin: 15px auto;
     line-height: 0;
 }
 
