requisito 10 -- insere funcçao de criaçao de 5x5 pixels em window.load

--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@ body {
 
 #pixel-board {
     display: block;
+    width: 42px;
+    height: 42px;
     border: 1px solid black;
     margin: 15px auto;
     line-height: 0;
